<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pic"
     android:baselineAligned="true"
     android:orientation="vertical"
     android:gravity="center_horizontal">

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/blogloving_text"
        android:id="@+id/bloglovin"
        style="@style/TextBloglovingStyle" />
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/follow_you"
        android:textColor="@color/color_button_w"
        android:textSize="@dimen/text_follow"
        android:id="@+id/follow"
        android:layout_marginTop="@dimen/text_follow_margin_top"
        style="@style/TextFollowYou" />
    <Button
        style="@style/LoginButt"
        android:text="@string/connect"
        android:textColor="@color/color_button_w"
        android:background="@drawable/button_connect"
        android:id="@+id/connect"
        android:layout_marginTop="@dimen/connect_margin_top" />

    <Button
        style="@style/LoginButt"
        android:text="@string/sign"
        android:textColor="@color/color_button_w"
        android:background="@drawable/button_sign"
        android:id="@+id/sign"/>

    <Button
        style="@style/LoginButt"
        android:text="@string/log_in"
        android:textColor="@color/color_button_g"
        android:background="@drawable/button_log_in"
        android:id="@+id/log"/>

</LinearLayout>